--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./style/style.css">
 </head>
+
 <body>
+
+    <!-- encabezado -->
     <header>
         <div class="logo">
             <img src="./src/image/logos/logotipo.png" alt="">
@@ -33,6 +37,61 @@
             </ul>
         </nav>
     </header>
+
+
+    <!-- Lista de iconos redes sociales -->
+    <div class="redes-sociales">
+        <div class="red-social">
+            <a href="https://www.facebook.com/academiaszarate" target="_blank"><img
+                    src="./src/image/iconos/facebook.png" alt=""></a>
+        </div>
+        <div class="red-social">
+            <a href="https://api.whatsapp.com/send/?phone=51955403296&text&type=phone_number&app_absent=0"
+                target="_blank"><img src="./src/image/iconos/whatsapp.png" alt=""></a>
+        </div>
+        <div class="red-social">
+            <a href="https://www.instagram.com/academias.zarate/" target="_blank"> <img
+                    src="./src/image/iconos/instagram.png" alt=""></a>
+
+        </div>
+        <div class="red-social">
+            <a href="https://www.tiktok.com/@academias.zarate" target="_blank"><img src="./src/image/iconos/tik-tok.png"
+                    alt=""></a>
+        </div>
+        <div class="red-social">
+            <a href="https://www.youtube.com/@academiaszarate490" target="_blank"><img
+                    src="./src/image/iconos/youtube.png" alt=""></a>
+        </div>
+    </div>
+
+    <!-- carrusel de imagenes -->
+    <div class="container-carrusel">
+        <div class="carruseles" id="slider">
+            <section class="slide-section">
+                <img src="./src/image/programas/car-banner-intensivo.jpg" alt="">
+            </section>
+            <section class="slide-section">
+                <img src="./src/image/programas/car-banner-mensual-ciclado.jpg" alt="">
+            </section>
+            <section class="slide-section">
+                <img src="./src/image/programas/car-banner-niveles.jpg" alt="">
+
+            </section>
+            <section class="slide-section">
+                <img src="./src/image/programas/car-banner-primera-seleccion.jpg" alt="">
+            </section>
+            <section class="slide-section">
+                <img src="./src/image/programas/car-banner-verano-ciclado.jpg" alt="">
+            </section>
+            <section class="slide-section">
+                <img src="./src/image/programas/car-banner-verano-zaratito.jpg" alt="">
+            </section>
+        </div>
+        <div class="btn-left"><i class='bx bx-chevron-left'></i></div>
+        <div class="btn-right"><i class='bx bx-chevron-right'></i></div>
+    </div>
+
     <script src="./app/main.js"></script>
 </body>
+
 </html>
