--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./style/style.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 
 <body>
@@ -89,6 +90,41 @@
         </div>
         <div class="btn-left"><i class='bx bx-chevron-left'></i></div>
         <div class="btn-right"><i class='bx bx-chevron-right'></i></div>
+    </div>
+
+    <div class="informacion">
+        <h2>Academia Zarate</h2>
+        <p>¡Conoce nuestros programas</p>
+        <div class="programas-container">
+            <div class="programa">
+                <img src="./src/image/programas/car-banner-verano-zaratito.jpg" alt="">
+                <h4>Zaratito</h4>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Animi obcaecati ea libero impedit ipsa
+                    dignissimos dolor eum tempora architecto, neque cumque facilis eveniet minima culpa iste rem veniam
+                    quibusdam? Cum.</p>
+            </div>
+            <div class="programa">
+                <img src="" alt="">
+                <h4>Ciclado</h4>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Animi obcaecati ea libero impedit ipsa
+                    dignissimos dolor eum tempora architecto, neque cumque facilis eveniet minima culpa iste rem veniam
+                    quibusdam? Cum.</p>
+            </div>
+            <div class="programa">
+                <img src="" alt="">
+                <h4>Niveles</h4>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Animi obcaecati ea libero impedit ipsa
+                    dignissimos dolor eum tempora architecto, neque cumque facilis eveniet minima culpa iste rem veniam
+                    quibusdam? Cum.</p>
+            </div>
+            <div class="programa">
+                <img src="" alt="">
+                <h4>Semestral</h4>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Animi obcaecati ea libero impedit ipsa
+                    dignissimos dolor eum tempora architecto, neque cumque facilis eveniet minima culpa iste rem veniam
+                    quibusdam? Cum.</p>
+            </div>
+        </div>
     </div>
 
     <script src="./app/main.js"></script>
